--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,13 +5,17 @@
   <title>Front</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <style>
+    body {
+      margin: 0px;
+      padding: 0px;
+      background-color: #f8f6f6;
+    }
+  </style>
 <link rel="stylesheet" href="styles.css"></head>
 <body>
   <app-root></app-root>
-
-  <script src="runtime.js" defer></script>
-  <script src="polyfills.js" defer></script>
-  <script src="vendor.js" defer></script>
-  <script src="main.js" defer></script>
-</body>
+<script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 </html>
